--- a/src/App.css
+++ b/src/App.css
@@ -8,8 +8,8 @@
     justify-content: space-between;
 }
 .img img{
-    height: 90%;
-    width: 90%;
+    height: 120px;
+    width: 80px;
 }
 .home{
          display: flex;
@@ -58,4 +58,7 @@
     h4{
         margin-right: 20px;
     }
+}
+.img{
+    padding: 8px;
 }
